src/requests/snapshots/bluetui__requests__confirmation__tests__0-false.snap
---
source: src/requests/confirmation.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"     ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓     "
"     ┃      Authentication required for the device 44:45:41:44:42:45      ┃     "
"     ┃                                                                    ┃     "
"     ┃                       Confirm Passkey 000000                       ┃     "
"     ┃                                                                    ┃     "
"     ┃                           No        Yes                            ┃     "
"     ┃                                                                    ┃     "
"     ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
